android/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_native_add_armeabi-v7a.stdout.txt
[1/2] Building CXX object CMakeFiles/native_add.dir/home/kewersonhugo/Develop/beakyn/exif/ios/Classes/native_add.cpp.o
/home/kewersonhugo/Develop/beakyn/exif/ios/Classes/native_add.cpp:36:20: warning: address of stack memory associated with local variable 'buf' returned [-Wreturn-stack-address]
            return buf;
                   ^~~
/home/kewersonhugo/Develop/beakyn/exif/ios/Classes/native_add.cpp:40:12: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
    return "error2";
           ^
/home/kewersonhugo/Develop/beakyn/exif/ios/Classes/native_add.cpp:52:16: warning: ISO C++11 does not allow conversion from string literal to 'char *' [-Wwritable-strings]
        return "error";
               ^
3 warnings generated.
[2/2] Linking CXX shared library /home/kewersonhugo/Develop/beakyn/exif/example/build/exif/intermediates/cmake/debug/obj/armeabi-v7a/libnative_add.so
FAILED: : && /home/kewersonhugo/Develop/tools/android-sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++  --target=armv7-none-linux-androideabi16 --gcc-toolchain=/home/kewersonhugo/Develop/tools/android-sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/kewersonhugo/Develop/tools/android-sdk/ndk/21.0.6113669/toolchains/llvm/prebuilt/linux-x86_64/sysroot -fPIC -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -Wl,--exclude-libs,libgcc_real.a -Wl,--exclude-libs,libatomic.a -static-libstdc++ -Wl,--build-id -Wl,--fatal-warnings -Wl,--exclude-libs,libunwind.a -Wl,--no-undefined -Qunused-arguments -shared -Wl,-soname,libnative_add.so -o /home/kewersonhugo/Develop/beakyn/exif/example/build/exif/intermediates/cmake/debug/obj/armeabi-v7a/libnative_add.so CMakeFiles/native_add.dir/home/kewersonhugo/Develop/beakyn/exif/ios/Classes/native_add.cpp.o  -latomic -lm && :
/home/kewersonhugo/Develop/beakyn/exif/ios/Classes/native_add.cpp:48: error: undefined reference to 'exif_data_new_from_file'
/home/kewersonhugo/Develop/beakyn/exif/ios/Classes/native_add.cpp:58: error: undefined reference to 'exif_ifd_get_name'
clang++: error: linker command failed with exit code 1 (use -v to see invocation)
ninja: build stopped: subcommand failed.
